# rust-cn-qbot

./: Cargo.toml
.github/workflows/: run-tests.yml
src/: controller.rs  crawler.rs  handler.rs  main.rs  post.rs  qbot.rs
src/controller/: sanitizer.rs  发送.rs  所有频道.rs  爬取.rs  设置频道.rs
src/qbot/: api.rs  authorizer.rs  error.rs  event.rs  json_u64.rs  ws.rs
src/qbot/api/: model.rs
src/qbot/event/: payload.rs  webhook.rs  ws.rs
src/qbot/event/webhook/: challenge.rs  service.rs
src/qbot/ws/: opcode.rs  payload.rs
tests/fixtures/: rustcc_category.html  rustcc_daily_post_article.html
