[package]
name = "rust-cn-qbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
scraper = { version = "0.19", features = ["atomic"] }
html5ever = "0.26"
markup5ever_rcdom = "0.2"
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "native-tls-alpn"] }
futures = { version = "0.3", default-features = false, features = [
    "std",
    "async-await",
] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[dev-dependencies]
mockito = "1.4"
mock_instant = "0.4"
